fix: 댓글 조회 기능 scheduleId별 조회로 수정 scheduleId와 관계 없이 전체 조회되는 문제 발생 -> 수정 완료